--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,29 +38,118 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    console.log('1');
+    let before15 = inventors.filter((inventor) => {
+      return inventor.year < 1500;
+    });
+
+    console.log(before15);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    console.log('2');
+    let inventorFull = inventors.map((inventor) => {
+      return `${inventor.first}  ${inventor.last}`;
+    });
+    console.log(inventorFull);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    console.log('3');
+    let sortedInventors = inventors.toSorted((a, b) => {
+      return a.year - b.year;
+    });
+    console.log(sortedInventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    console.log('4');
+    let totalYearsLived = inventors.reduce((a, e) => {
+      return a+(e.passed - e.year);
+    }, 0);
+    console.log(totalYearsLived);
 
     // 5. Sort the inventors by years lived
+    console.log('5');
+    let sortedInventorsLived = inventors.toSorted((a, b) => {
+      return (a.passed - a.year) - (b.passed - b.year);
+    })
+    console.log(sortedInventorsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    const boulevards = [
+      "Boulevards of Paris",
+      "City walls of Paris",
+      "Thiers wall",
+      "Wall of Charles V",
+      "Wall of Philip II Augustus",
+      "City gates of Paris",
+      "Haussmann's renovation of Paris",
+      "Boulevards of the Marshals",
+      "Boulevard Auguste-Blanqui",
+      "Boulevard Barbès",
+      "Boulevard Beaumarchais",
+      "Boulevard de l'Amiral-Bruix",
+      "Boulevard Mortier",
+      "Boulevard Poniatowski",
+      "Boulevard Soult",
+      "Boulevard des Capucines",
+      "Boulevard de la Chapelle",
+      "Boulevard de Clichy",
+      "Boulevard du Crime",
+      "Boulevard du Général-d'Armée-Jean-Simon",
+      "Boulevard Haussmann",
+      "Boulevard de l'Hôpital",
+      "Boulevard des Italiens",
+      "Boulevard Lefebvre",
+      "Boulevard de la Madeleine",
+      "Boulevard de Magenta",
+      "Boulevard Malesherbes",
+      "Boulevard Marguerite-de-Rochechouart",
+      "Boulevard Montmartre",
+      "Boulevard du Montparnasse",
+      "Boulevard Raspail",
+      "Boulevard Richard-Lenoir",
+      "Boulevard Saint-Germain",
+      "Boulevard Saint-Michel",
+      "Boulevard de Sébastopol",
+      "Boulevard de Strasbourg",
+      "Boulevard du Temple",
+      "Boulevard Voltaire",
+      "Boulevard Hippolyte-Marquès"
+    ]
 
+    const deRoad = boulevards.filter((e) => {
+      return e.includes(" de ");
+    })
+
+    console.log(deRoad);
+    
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortedPeopleLast = people.toSorted((a, b) => {
+      const aLast = a.split(', ')[1];
+      const bLast = b.split(', ')[1];
+      return aLast < bLast ? -1 : 1;
+    })
+    console.log(sortedPeopleLast);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const counterObject = data.reduce((o, e) => {
+      if(Object.prototype.hasOwnProperty(o, e)){
+        o[e]++;
+      }
+      else{
+        o[e] = 0;
+      }
+      return o;
+    }, {});
 
+    console.log(counterObject);
   </script>
 </body>
 </html>
